# vicky

./: .gitignore  API.md  Cargo.toml  README.md  Rocket.example.toml  devenv.nix  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  nix.yml  rust.yml
dashboard/: .proxyrc  package-lock.json  package.json  tsconfig.json
dashboard/src/: app.tsx  content.module.css  content.tsx  index.html  styles.css
dashboard/src/components/: filter-slider.module.css  filter-slider.tsx  group-filter.module.css  group-filter.tsx  icons.tsx  login.module.css  login.tsx  menu.module.css  menu.tsx  tag.tsx  task.module.css  task.tsx  tasks.module.css  tasks.tsx  xterm.tsx
dashboard/src/contexts/: user.tsx  web-config.tsx
dashboard/src/hooks/: useEventSource.tsx  useTaskGroups.tsx  useTasks.tsx
dashboard/src/services/: api.tsx
deployment/: docker-compose.yaml  garage.toml  realm-export.json
fairy/: Cargo.toml  Rocket.example.toml
fairy/src/: api.rs  config.rs  error.rs  main.rs  utils.rs
fairy/src/tasks/: log_sink.rs  mod.rs  runner.rs  types.rs
manifests/: node.example.yaml  node2.example.yaml
src/lib/: lib.rs
src/lib/documents/: mod.rs
src/lib/etcd/: client.rs  election.rs  mod.rs
src/lib/manifests/: mod.rs
src/lib/s3/: client.rs
src/lib/vicky/: errors.rs  scheduler.rs
vicky/: API.md  Cargo.toml  README.md  Rocket.example.toml  build.rs  config.example.toml  diesel.toml
vicky-worker/: Cargo.toml  Rocket.example.toml
vicky-worker/src/: config.rs  main.rs
vicky/manifests/: task.example.yaml
vicky/migrations/2024-04-26-080445_create_tasks/: down.sql  up.sql
vicky/migrations/2024-05-08-112529_create_users/: down.sql  up.sql
vicky/migrations/2024-05-27-095026_lock_poisoning/: down.sql  up.sql
vicky/migrations/2025-02-08-090101_add_created_at/: down.sql  up.sql
vicky/migrations/2025-02-08-153251_add_finished_at/: down.sql  up.sql
vicky/migrations/2025-02-08-160150_add_claimed_at/: down.sql  up.sql
vicky/migrations/2025-12-01-190604-0000_enum_types/: down.sql  up.sql
vicky/migrations/2025-12-12-125521-0000_task_groups/: down.sql  up.sql
vicky/migrations/2026-01-05-130242-0000_heartbeat/: down.sql  up.sql
vicky/migrations/2026-01-06-184413-0000_fix_timestamp_tz/: down.sql  up.sql
vicky/migrations/2026-02-09-161859-0000_task_cancel/: down.sql  up.sql
vicky/migrations/2026-02-11-120001-0000_task_templates/: down.sql  up.sql
vicky/migrations/2026-02-16-100033-0000_lock_clean/: down.sql  up.sql
vicky/src/lib/: errors.rs  lib.rs
vicky/src/lib/database/: mod.rs  schema.rs
vicky/src/lib/database/entities/: lock.rs  mod.rs  task.rs  task_template.rs  user.rs
vicky/src/lib/documents/: mod.rs
vicky/src/lib/etcd/: client.rs  election.rs  mod.rs
vicky/src/lib/logs/: mod.rs
vicky/src/lib/query/: mod.rs
vicky/src/lib/s3/: client.rs
vicky/src/lib/vicky/: constraints.rs  mod.rs  scheduler.rs
vickyctl/: Cargo.toml
vickyctl/lib/: api.rs
vickyctl/src/: account.rs  cli.rs  error.rs  http_client.rs  humanize.rs  locks.rs  main.rs  tasks.rs
vickyctl/src/locks/: http.rs  mod.rs  tui.rs  types.rs
vickyctl/src/tui/: lock_resolver.rs  mod.rs  popup.rs  utils.rs
