[package]
name = "fairy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures-util = { version = "0.3.28", features = ["sink"] }
hyper = { version = "0.14.27", features = ["client", "http1", "http2", "tcp"] }
log = "0.4.20"
snafu = "0.8"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["rt", "macros", "process"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
uuid = { version = "1.4.1", features = ["serde"] }
rocket = { version="0.5.0", features = ["json", "secrets"] }
which = "6.0.1"
vicky = { path = "../vicky" }

[features]
nixless-test-mode = []
