[package]
name = "vicky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.19"
rand = "0.8.5"
snafu = "0.8"
thiserror = "1.0.43"
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.71"
# https://github.com/awesomized/crc64fast-nvme/issues/5
aws-sdk-s3 = "=1.34.0"
uuid = { version = "1.18.1", features = ["fast-rng", "v4", "serde"] }
rocket = { version = "0.5.1", features = ["json", "secrets", "uuid"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1", features = ["diesel_postgres_pool"] }
reqwest = { version = "0.12.4", features = ["json"] }
jwtk = "0.3.0"
diesel = { version = "2.1.6", features = ["postgres", "uuid", "r2d2", "chrono"] }
itertools = { version = "0.13.0" }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
chrono = { version= "0.4.39", features=["serde"] }
delegate = "0.13.5"
strum = { version = "0.27.2", features = ["derive"] }
bon = "3.8"

[[bin]]
name = "vicky"
path = "src/bin/vicky/main.rs"

[lib]
name = "vickylib"
path = "src/lib/lib.rs"

[build-dependencies]
regex = "1.10.4"
