[package]
name = "vicky"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
snafu = "0.8"
thiserror = "2.0"
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
# https://github.com/awesomized/crc64fast-nvme/issues/5
aws-sdk-s3 = "1.119"
uuid = { version = "1.19", features = ["fast-rng", "v4", "serde"] }
rocket = { version = "0.5", features = ["json", "secrets", "uuid"] }
rocket_sync_db_pools = { version = "0.1", features = ["diesel_postgres_pool"] }
reqwest = { version = "0.13", features = ["json"] }
jwtk = "0.4"
diesel = { version = "2.3", features = ["postgres", "uuid", "r2d2", "chrono", "postgres_backend"] }
itertools = { version = "0.14" }
diesel_migrations = { version = "2.3", features = ["postgres"] }
chrono = { version= "0.4", features=["serde"] }
delegate = "0.13"
strum = { version = "0.27", features = ["derive"] }
bon = "3.8"

[[bin]]
name = "vicky"
path = "src/bin/vicky/main.rs"

[lib]
name = "vickylib"
path = "src/lib/lib.rs"

[build-dependencies]
regex = "1.10.4"
